--- a/Events_Projects/events/events.html
+++ b/Events_Projects/events/events.html
@@ -220,22 +220,17 @@
 										<h1 style="margin-top:0px; font-family: 'Lucida Console"><br><b>Techatlon 18</b></h1>
 										<div class="row" >
 											<div class="col-sm-4">
-												<img src="poster.jpg" style="width:100%;height:100%; margin-bottom:10px;">
+												<img src="38521492_472350339842377_5660145427245170688_o.jpg" style="width:100%;height:100%; margin-bottom:10px;">
 											</div>
 											<div class="col-sm-8" style="font-family: 'Roboto Slab',serif; font-size:20px;">
 												<div class="alert alert-success" role="alert">
 													<strong>Event Description</strong>
 												</div>
 												<div style="text-align:justify;">
-												We are thrilled to announce that we are conducting <b>TECHATHLON</b>, a hackathon in <b>Machine Learning, IoT and  Blockchain</b> in association with <b>Curl Analytics</b>, a leading research company with expertise in ML, IoT and Blockchain. 
+												We are thrilled to announce that we will be  <b>recruiting</b> for our club very soon. The test will have aptitude and some coding questions which will be optional. It is open for <b>all branches</b> and we are fine even if you don't code yet . We will <b>Mentor</b> you! 
 												<br>
-												Cash prizes upto <b>₹60,000 and internship/job</b> offers at Curl Analytics up for grabs!
 												
 												<br>
-												Idea Phase live now
-												<a href="../eventDetails/techathlon.html" style="color:blue;">Learn More...</a>
-												<br>
-													Feel free to clarify your queries <a style="color:blue;" href="/Contacts/contacts.html">here</a>
 												</div>
 												
 											</div>
@@ -714,8 +709,12 @@ Having worked with technology giant like IBM , he talked about his PhD Thesis to
                   <font face="Verdana, Geneva, sans-serif">
                   <ul class="list-unstyled footer-social" style="text-align:center;position:relative;right:18px;">
                     <!-- <li><a href="#"><span class="fa fa-twitter"></span> Twitter</a></li> -->
-                    <li><a href="https://www.facebook.com/codingclubrvce/" target="_blank"><span class="fa fa-facebook"></span> Facebook</a></li>
+                    <li><a href="https://www.github.com/codingclubrvce/" target="_blank"><span class="fa fa-github"></span> Github</a></li>
                     <li><a href="https://www.linkedin.com/company/coding-club-rvce/" target="_blank"><span class="fa fa-linkedin-square"></span> LinkedIn </a></li>
+
+                    <li><a href="https://www.facebook.com/codingclubrvce/" target="_blank"><span class="fa fa-facebook"></span> Facebook</a></li>
+
+                    <li><a href="https://www.instagram.com/codingclubrvce/" target="_blank"><span class="fa fa-instagram"></span> Instagram</a></li>
                   </ul>
                   </font>
                 </div>
