--- a/Events_Projects/events/events.html
+++ b/Events_Projects/events/events.html
@@ -217,7 +217,7 @@
 									
 									<!--//////////////////////////////event1//////////////////////////////////////////////-->
 									<div class="container" style="max-width:1000px;">  <!--border-style:solid; border-radius:30px;-->
-										<h1 style="margin-top:0px; font-family: 'Lucida Console"><br><b>Techatlon 18</b></h1>
+										<h1 style="margin-top:0px; font-family: 'Lucida Console"><br><b>Recruitment Drive 2019</b></h1>
 										<div class="row" >
 											<div class="col-sm-4">
 												<img src="38521492_472350339842377_5660145427245170688_o.jpg" style="width:100%;height:100%; margin-bottom:10px;">
