--- a/Contacts/contacts.html
+++ b/Contacts/contacts.html
@@ -101,11 +101,11 @@
 		<h2>Contact Details:</h2>
 		<h5>Email ID: codingclub@rvce.edu.in</h5>
 		<div class="Division">
-			<h3>Coding Club President<br>Saket Ringsia</h3>
+			<h3>Coding Club President<br>Akshar Prasad</h3>
 
 		<ul>
-			<li>Phone Number: 91 97711 79771</li>
-			<li>Email ID: saketringsia.cs16@rvce.edu.in</li>
+			<li>Phone Number: 91 89047 72770</li>
+			<li>Email ID: aksharprasad.cs17@rvce.edu.in</li>
 		</ul>
 		
 		</div>
